make my profile prettier

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
       <div class="card-white red-neon">
 
-        <ul class="list-inline">
+        <ul class="list-inline blink">
           <h2>Follow me</h2>
           <li><a href = "https://www.linkedin.com/in/jeremy-antoine-bb6b531b/"><i class="fab fa-linkedin-in"></i></a></li>
           <li><a href = "https://github.com/JerryAnt"><i class="fab fa-github"></i></a></li>
