added the portfolio link_to

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <p>I like <em>anime</em>, <em>food</em> and <em>museums</em>.</p>
       </div>
 
-        <a href = ""><p class="button-ruby red-neon">Portfolio</p></a>
+        <a href = "https://jeremy-antoine-cool-dev-4-hire.herokuapp.com/"><p class="button-ruby red-neon">Portfolio</p></a>
 
       <div class="card-white red-neon">
 
